--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
-apply plugin: 'java'
+apply plugin: 'application'
 
+mainClassName="ticket.server.start.TicketServerStart"
 repositories {
    jcenter()
 }
